RESOLVED FIXED294067
music.apple.com: some assets are not playing in Safari
https://bugs.webkit.org/show_bug.cgi?id=294067
Summary music.apple.com: some assets are not playing in Safari
Jean-Yves Avenard [:jya]
Reported 2025-06-05 01:45:19 PDT
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-06-05 01:58:32 PDT
EWS
Comment 2 2025-06-05 10:22:14 PDT
Committed 295878@main (5d82840740c5): <https://commits.webkit.org/295878@main> Reviewed commits have been landed. Closing PR #46364 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.